# mathHeuristic

./: .gitignore  CMakeLists.txt  Formulation.ipynb  Makefile  README.md  Untitled.ipynb  auxiliar.h  exit.txt  form.mps  heuristic  heuristic.cpp  heuristic.h  heuristicB.cpp  instance.h  logic.txt  main.cpp  model.ilp  nohup.out  old_file.cpp  rpheuro  rpheuro.cpp  tail
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
instances/stanford-temporal/: README.md  email.in
instances/steiner-OCT/: README.md  STEIB1.in  STEIB2.in  STEIB3.in  STEIB4.in  STEIB5.in  STEIB6.in  STEIB7.in  STEIC1.in  STEIC2.in  STEIC3.in  STEIC4.in  STEIC5.in  STEIC6.in  STEIC7.in  STEID1.in  STEID2.in  STEID3.in  STEID4.in  STEID5.in  STEID6.in  STEID7.in  gen.py
instances/tests/: Palmetto.in  STEIB3.in  STEIC2.in  Tw_cc.in  berry35.in  palmer12.in  raidl10.in  teste.in
instances/well-known/: berry35.in  berry35u.in  palmer12.in  palmer24.in  palmer6.in  raidl10.in  raidl20.in  raidl50.in
instances/zoo-MRCT/: Cogentco_11.in  Colt_4.in  Deltacom_12.in  GtsCe_8.in  Kdl_28.in  Palmetto.in  README.md  TataNld_2.in  Tw_cc.in  UsCarrier_6.in
output/: Cogentco_11_stats.csv
